--- a/src/Components/RegisterPage/Register.css
+++ b/src/Components/RegisterPage/Register.css
@@ -1,10 +1,10 @@
-.App{
-    width: 100%;
+.Register{
+
     justify-content: center;
     background-color: #e8effc;
 }
 
-.loginForm{
+.registerForm{
     margin:auto;
     width: 50%;
     padding: 100px 50px 100px 50px;
@@ -18,10 +18,11 @@
     color: black;
     font-size: 30px;
 }
+
 .label{
     display: inline-block;
-    text-align: left;
 
+    test-align:right;
 }
 .input{
     vertical-align:top;
@@ -31,16 +32,15 @@
     padding: 10px 10px 10px 10px;
 }
 
-.loginButton{
-    text-align: center;
-    light-height: heightValue;
+.button{
     border-radius: 10px;
     background-color: #e7effc;
+    justify-content: center;
+    width: 50%;
     margin-top: 50px;
     margin-left: 10px;
     margin-right: 10px;
     margin-bottom: 30px;
     box-shadow:5px 5px 10px gray;
-    vertical-align:center;
 
 }
