--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -5,11 +5,11 @@
 }
 .text{
     color: white;
+    font-family: "Arial Black", sans-serif;
 }
 .container{
     margin: auto;
-    width: 40%;
-
+    width: 80%;
 }
 
 .header{
@@ -21,11 +21,32 @@
     margin-bottom: 50px;
 }
 .paragraph{
-    width:100px;
-    height:30px;
     font-size: 1.5em;
     text-align: center;
     margin: 0 auto;
 }
 
 
+
+.cardRole{
+    margin:0px 100px 0px 100px;
+
+    position: relative;
+    background-color: transparent!important;
+    background-clip: border-box;
+    border: 10px solid rgba(0,0,0,.125)!important;
+    border-radius: .25rem!important;;
+}
+
+.cardimg{
+    width:100px!important;
+    align-self: center!important;
+}
+
+.homeButton{
+    align-self: center!important;
+    text-align: center!important;
+    color: white!important;
+    border-color:rgba(0,0,0,.125)!important;
+    font-family: "Arial Black", sans-serif;
+}
