--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -17,20 +17,23 @@
     font-size: 4.5em;
     text-align: center;
     letter-spacing: -1px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    margin-top: 200px;
+    padding: 45px 0;
 }
 .paragraph{
+    font-family: "Arial Black", sans-serif;
     font-size: 1.5em;
     text-align: center;
     margin: 0 auto;
 }
 
-
+.roleContent{
+    padding: 45px 0;
+}
 
 .cardRole{
     margin:0px 100px 0px 100px;
-
+    padding: 15px 0;
     position: relative;
     background-color: transparent!important;
     background-clip: border-box;
