update frontend 9/17 whb

--- a/src/Components/RegisterPage/Register.css
+++ b/src/Components/RegisterPage/Register.css
@@ -34,7 +34,7 @@
 
 .button{
     border-radius: 10px;
-    background-color: #e7effc;
+    /*background-color: #e7effc;*/
     justify-content: center;
     width: 95%;
     margin-top: 50px;
