--- a/src/Components/ListQuizPage/listQuiz.css
+++ b/src/Components/ListQuizPage/listQuiz.css
@@ -34,9 +34,16 @@
     display: inline-flex;
     flex-direction:column;
     justify-content: space-around;
+    align-items: center;
 }
 .quizName{
     font-family: "Arial Black", sans-serif;
     font-size: 1.5em;
     width:100%
+}
+
+a{
+
+    text-decoration:none;
+
 }
