edit the login and register box

--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -1,7 +1,10 @@
 #background{
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    -moz-background-size: 100% 100%;
+    background-repeat: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 .text{
     color: white;
