update create quiz / edit quiz and so on

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,14 @@
+.App{
+    height: 100%;
+    margin-bottom: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    background-color: #e8effc;
+}
+
 
 
