--- a/src/Components/ListQuizPage/listQuiz.css
+++ b/src/Components/ListQuizPage/listQuiz.css
@@ -11,6 +11,14 @@
 
 .listQuizPage{
     background-color: white;
+    /*height:100%;*/
+    margin-top: 0;
+    margin-bottom: 0;
+    left: 0;
+    height: auto;
+    position: absolute;
+    min-height: 100%;
+    width: 100%;
 }
 
 .myQuiz{
