--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -1,13 +1,23 @@
-.App{
-    width: 100%;
-    justify-content: center;
-    background-color: #e8effc;
+/*.App{*/
+/*    width: 100%;*/
+/*    justify-content: center;*/
+/*    background-color: #e8effc;*/
+/*}*/
+
+.Login{
+    width: 500px;
+    /*height: 750px;*/
+    background-color: whitesmoke;
+    margin: 20px auto;
+    /*padding: 50px 70px;*!*/
+    box-shadow: 5px 5px #ddd;
+    border-radius: 5px;
 }
 
 .loginForm{
     margin:auto;
-    width: 50%;
-    padding: 100px 50px 100px 50px;
+    width: 90%;
+    padding: 80px 50px 80px 50px;
     border-radius:10px;
     border: 3px;
     border-color: bisque;
@@ -37,11 +47,11 @@
     text-align-all: center;
     light-height: heightValue;
     border-radius: 10px;
-    background-color: #e7effc;
-    margin-top: 50px;
+    /*background-color: #e7effc;*/
+    margin-top: 30px;
     margin-left: 10px;
     margin-right: 10px;
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
     box-shadow:5px 5px 10px gray;
     vertical-align:center;
 
