--- a/src/Components/CreateQuizPage/CreateQuiz.css
+++ b/src/Components/CreateQuizPage/CreateQuiz.css
@@ -17,23 +17,23 @@
     position: absolute;
     width: 350px;
     height: 150px;
-    padding: 15px
+    padding: 12px
 }
 
 .transform-button{
-    width: 100px;
+    padding: 5px 18px
 }
 
 .edit-button{
     float: left;
-    margin-top: 25%;
-    width: 50px;
+    margin-top: 28%;
+    padding:5px 18px
 }
 
 .delete-quiz-button{
     float: right;
-    margin-top: 25%;
-    width: 40px;
+    margin-top: 28%;
+    padding: 5px 18px
 }
 
 
