--- a/src/Components/CreateQuizPage/CreateQuiz.css
+++ b/src/Components/CreateQuizPage/CreateQuiz.css
@@ -21,7 +21,7 @@
 }
 
 .transform-button{
-    padding: 5px 18px
+    padding: 5px 20px
 }
 
 .edit-button{
@@ -51,14 +51,14 @@
 
 .myQuiz{
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 40px;
     font-family: "Arial Black", sans-serif;
     font-size: 2.0em;
 }
 
 .QuizZone{
     width: 350px;
-    margin: 50px;
+    margin: 30px 50px 20px 50px;
     height:150px;
     padding: 30px;
     background-color: #e7effc;
@@ -87,4 +87,17 @@ a{
 .no_private{
     padding: 20px 100px;
     font-size: 25px;
+}
+
+.button-onfocus{
+    display: none;
+}
+
+.QuizZone:hover .button-onfocus{
+    display: block;
+}
+
+.QuizZone:hover{
+    background-color: #e7effc;
+    color: black;
 }
