update App-user status binding, update UI for all the pages, Create update account page, update the Route function,

--- a/src/Components/Communication/Communication.css
+++ b/src/Components/Communication/Communication.css
@@ -12,6 +12,10 @@
 
 .communicationPage{
     background-color: white;
+    width: 80%;
+    margin: 50px auto;
+    padding: 20px 0 40px 0;
+    border-radius: 5px;
 }
 
 .text-container{
