--- a/src/Components/SupervisorDashboard/SupervisorDashboard.css
+++ b/src/Components/SupervisorDashboard/SupervisorDashboard.css
@@ -1,5 +1,10 @@
 .SupervisorDashboard{
     background-color: white;
+    width: 86%;
+    margin: 50px auto;
+    padding: 20px 0 100px 0;
+    border-radius: 6px;
+    box-shadow: 5px 5px #ddd;
 }
 
 .header{
