--- a/src/Components/EditQuizPage/EditQuiz.css
+++ b/src/Components/EditQuizPage/EditQuiz.css
@@ -1,13 +1,13 @@
 
 .editQuizPage{
-    background-color:  #e8effc;
+    /*background-color:  #e8effc;*/
     /*height:100%;*/
     margin-top: 0;
     margin-bottom: 0;
     left: 0;
     height: auto;
     position: absolute;
-    min-height: 100%;
+    /*min-height: 100%;*/
     width: 100%;
 }
 
