--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -1,11 +1,17 @@
 .quizPage{
-    height:680px
+
+    width: 80%;
+    margin: 30px auto;
+    padding: 20px 0 20px 0;
+    border-radius: 5px;
+    box-shadow: 5px 5px #ddd;
+    min-height: 600px;
 }
 
 .backButton {
 
     margin-left: 50px;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 
@@ -30,8 +36,8 @@
 
 
 .option{
-    padding-bottom:15px;
-    padding-top:15px
+    padding-bottom:10px;
+    padding-top:10px
 }
 
 .optionButton {
@@ -47,7 +53,7 @@
 }
 
 .question{
-    padding: 30px 10px 30px 10px ;
+    padding: 20px 10px 30px 10px ;
     text-align: center;
     color: black;
     font-size: 30px;
@@ -56,7 +62,7 @@
 .quizForm{
     padding: 30px 10px 30px 10px ;
     text-align: center;
-    height: 476px;
+
 
 }
 
