--- a/src/Components/RegisterPage/Register.css
+++ b/src/Components/RegisterPage/Register.css
@@ -1,29 +1,23 @@
 .Register{
-    justify-content: center;
-    background: url('../images/registerbackground.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
-}
-
-.registerbox{
-    width: 50%;
-    height: 80%;
+    width: 500px;
+    /*height: 750px;*/
     background-color: whitesmoke;
-    margin: 100px auto;
-    padding: 50px 70px;
+    margin: 10px auto 10px auto;
+    /*padding: 50px 70px;*!*/
     box-shadow: 5px 5px #ddd;
     border-radius: 5px;
+
+
 }
+
+
 .login-img{
     height:60px;
     width:60px;
 }
 .registerForm{
     margin:auto;
-    padding: 20px 20px 20px 20px;
+    padding: 50px 50px 30px 50px;
     border-radius:10px;
     border: 3px;
 
@@ -47,15 +41,19 @@
     padding: 10px 10px 10px 10px;
 }
 
-.button{
+.Register .button{
     border-radius: 10px;
     /*background-color: #e7effc;*/
     justify-content: center;
-    width: 95%;
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 30px;
+    width: 80%;
+    margin: 10px 10px 30px;
     box-shadow:5px 5px 10px gray;
 
+}
+
+.register-button-row{
+    justify-content: space-evenly;
+    margin-right: 0;
+    margin-left: 0;
+    text-align: center;
 }
