--- a/src/App.css
+++ b/src/App.css
@@ -2,17 +2,28 @@
 
     height: 100%;
     margin-bottom: 0;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     min-height: 100%;
     height: auto;
-    background:  url('./Components/images/registerbackground.jpg') no-repeat center center fixed;
+    overflow-y: scroll;
+
+    background:  url('./Components/images/registerbackground.jpg') repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+.App-container{
+    padding-top: 66px;
 }
 
 
@@ -24,6 +35,14 @@
     font-size: 18px;
     font-weight: bolder;
     padding-left: 25px;
+}
+
+.give-comment-textarea{
+    height: 180px;
+}
+
+.modal-dialog{
+    top:-10%
 }
 
 
