--- a/src/Components/FeedBack/FeedBack.css
+++ b/src/Components/FeedBack/FeedBack.css
@@ -1,6 +1,12 @@
 
 .feedbackPage{
     background-color: white;
+    width: 90%;
+    margin: 50px auto;
+    padding: 20px 0;
+    border-radius: 5px;
+    box-shadow: 5px 5px #ddd;
+    min-height: 600px;
 }
 
 .backButton {
@@ -50,5 +56,40 @@
 
 .modal-content{
     width: 580px;
+}
+
+
+.label{margin-left: 0}
+
+.Share{
+    margin: 10px auto;
+    padding: 20px 10px 20px 10px;
+    width: 450px;
+    background-color: whitesmoke;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 5px 5px #ddd;
+}
+
+.share-button{
+    width: 150px;
+}
+
+.share-row{
+    text-align: center;
+    padding: 20px 0 20px 0;
+}
+
+#share-email,.form-check{
+    width: 80%!important;
+    margin: 10px auto;
+}
+
+.shareForm{
+    text-align: center;
+}
+
+.Share .form-check-label{
+    float:left;
 }
 
