--- a/src/Components/SupervisorDashboard/SupervisorDashboard.css
+++ b/src/Components/SupervisorDashboard/SupervisorDashboard.css
@@ -1,7 +1,7 @@
 .SupervisorDashboard{
     background-color: white;
     width: 86%;
-    margin: 50px auto;
+    margin: 50px auto 0 auto;
     padding: 20px 0 100px 0;
     border-radius: 6px;
     box-shadow: 5px 5px #ddd;
