--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App{
 
-    height: 100%;
+    /*height: 100%;*/
     margin-bottom: 0;
     position: fixed;
     top: 0;
@@ -24,12 +24,14 @@
 
 .App-container{
     padding-top: 66px;
+    padding-bottom: 66px;
+    overflow-y: scroll;
+    height: 100%;
+    width:100%;
+    position: fixed;
 }
 
 
-.navbar-text{
-    /*margin-right: 35%;*/
-}
 
 .modal-header{
     font-size: 18px;
