Update delete function to the create quiz page and add password&repeat password must be same to the register page

--- a/src/Components/CreateQuizPage/CreateQuiz.css
+++ b/src/Components/CreateQuizPage/CreateQuiz.css
@@ -109,3 +109,19 @@ a{
     background-color: #e7effc;
     color: black;
 }
+
+.cancelDel{
+    width: 78px;
+}
+
+.ensureDel{
+    width: 78px;
+    background-color: orangered;
+    border: orangered;
+}
+
+.ensureDel:hover{
+    width: 78px;
+    background-color: firebrick;
+    border: orangered;
+}
