--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,11 @@
     top:-10%
 }
 
+.modal-body{
+    padding: 25px 20px 25px 20px;
+    font-family: "Arial Black";
+    font-size: 20px;
+}
 
 
 
