--- a/src/Components/resetPassword/resetPassword.css
+++ b/src/Components/resetPassword/resetPassword.css
@@ -40,7 +40,7 @@
     padding: 10px 10px 10px 10px;
 }
 
-.loginButton{
+.resetButton{
     text-align: center;
     width: 95%;
     text-align-all: center;
