--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,24 @@
     padding-left: 25px;
 }
 
+.modal-header button{
+    background-color: #1198AB;
+    border:#1198AB;
+}
+
+.modal-header button:hover{
+    background-color: #1180AB;
+}
+
+.modal-footer button{
+    background-color: #1198AB;
+    border:#1198AB;
+}
+
+.modal-footer button:hover{
+    background-color: #1180AB;
+}
+
 .give-comment-textarea{
     height: 180px;
 }
@@ -49,8 +67,12 @@
 
 .modal-body{
     padding: 25px 20px 25px 20px;
-    font-family: "Arial Black";
-    font-size: 20px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+.modal-content{
+    margin-top: 150px;
+
 }
 
 
