--- a/src/Components/Communication/Communication.css
+++ b/src/Components/Communication/Communication.css
@@ -1,21 +1,21 @@
 .backButton {
     margin-left: 50px;
     margin-top: 50px;
+
 }
 
-.feedbackButton{
-    float:right ;
-    margin-right: 50px;
-    margin-top: 50px;
-}
+
+
+
 
 
 .communicationPage{
-    background-color: white;
+    background-color:#FFFCF9;
     width: 80%;
     margin: 50px auto;
     padding: 20px 0 40px 0;
     border-radius: 5px;
+    box-shadow: 5px 5px #ddd;
 }
 
 .text-container{
@@ -23,25 +23,40 @@
 }
 
 .title{
-    font-family: "Arial Black", sans-serif;
-    font-size: 2.0em;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-weight: bolder;
+    font-size: 40px;
 }
 
 .sub-title{
-
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-weight: bold;
     font-size: 30px;
 }
 
 .content{
-    font-size: 25px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-size: 28px;
 }
 
 .start-btn{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    background-color: #1198AB;
+    border: #1198AB;
     padding: 10px 50px;
     font-size: 28px;
 }
 
-.box{
-    padding: 20px 0;
+.start-btn:hover{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    background-color: #1180AB;
+}
+
+.start-box{
+    padding: 30px 0;
     text-align: center;
+}
+
+.communication-form{
+    padding-top: 25px;
 }
