--- a/src/Components/FeedBack/FeedBack.css
+++ b/src/Components/FeedBack/FeedBack.css
@@ -1,12 +1,17 @@
 
 .feedbackPage{
-    background-color: white;
+    background-color:#FFFCF9;
     width: 90%;
     margin: 50px auto;
     padding: 20px 0;
     border-radius: 5px;
     box-shadow: 5px 5px #ddd;
     min-height: 600px;
+}
+
+.feedback-container{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    padding-top: 20px;
 }
 
 .backButton {
@@ -46,17 +51,26 @@
 
 
 .feedbackFormButton{
+    background-color: #1198AB;
+    border:#1198AB;
     width: 120px;
 }
 
-.saveModal{
-
-    /*width: 400px;*/
+.feedbackFormButton:hover{
+    background-color: #1180AB;
 }
+
+.feedbackFormButton:focus{
+    background-color: #1198AB;
+}
+
 
 .modal-content{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
     width: 580px;
 }
+
+
 
 
 .label{margin-left: 0}
@@ -93,3 +107,10 @@
     float:left;
 }
 
+.saveModal{
+    position: fixed;
+}
+
+.feedbackPage .modal-content{
+    margin-head:100px;
+}
