--- a/src/Components/ListQuizPage/listQuiz.css
+++ b/src/Components/ListQuizPage/listQuiz.css
@@ -10,8 +10,7 @@
 }
 
 .listQuizPage{
-
-    background-color: white;
+    background-color:#FFFCF9;
     width: 90%;
     margin: 50px auto;
     padding: 20px 0 40px 0;
@@ -25,6 +24,7 @@
     margin-top: 50px;
     font-family: "Arial Black", sans-serif;
     font-size: 2.0em;
+    text-align: center;
 }
 
 .listQuizPage .QuizZone{
@@ -32,9 +32,11 @@
     margin: 40px;
     height:120px;
     padding: 30px;
-    background-color: #e7effc;
+    background-color: #E5F4F6;
 
     color: black;
+    font-family: "Comic Sans MS", "Comic Sans";
+    font-weight: bolder;
     border: 0;
     font-size: 22px;
 
@@ -46,13 +48,12 @@
 
 
 .listQuizPage .QuizZone:hover{
-    background-color: #0d6efd;
+    background-color: #1198AB;
     color: white;
 }
 
 
 .quizName{
-    font-family: "Arial Black", sans-serif;
     font-size: 1.5em;
     width:100%
 }
