--- a/src/Components/LoginPage/Login.css
+++ b/src/Components/LoginPage/Login.css
@@ -12,12 +12,13 @@
     /*padding: 50px 70px;*!*/
     box-shadow: 5px 5px #ddd;
     border-radius: 5px;
+    text-align: center;
 }
 
 .loginForm{
     margin:auto;
     width: 90%;
-    padding: 80px 50px 80px 50px;
+    padding: 70px 50px 70px 50px;
     border-radius:10px;
     border: 3px bisque;
 }
@@ -42,7 +43,7 @@
 
 .loginButton{
     text-align: center;
-    width: 95%;
+    width: 80%;
     text-align-all: center;
     light-height: heightValue;
     border-radius: 10px;
@@ -54,4 +55,12 @@
     box-shadow:5px 5px 10px gray;
     vertical-align:center;
 
+}
+
+.create-link{
+    padding: 0;
+}
+
+.login-row{
+    justify-content: center;
 }
