--- a/src/Components/resetPassword/resetPassword.css
+++ b/src/Components/resetPassword/resetPassword.css
@@ -12,6 +12,7 @@
     /*padding: 50px 70px;*!*/
     box-shadow: 5px 5px #ddd;
     border-radius: 5px;
+    text-align: center;
 }
 
 .resetPasswordForm{
