--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,27 @@
 
 }
 
+.page-button{
+    background-color: #1198AB;
+    border:#1198AB;
+
+    text-align: center;
+    width: 80%;
+    text-align-all: center;
+
+    border-radius: 10px;
+    /*background-color: #e7effc;*/
+    margin-top: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    /*margin-bottom: 30px;*/
+
+    vertical-align:center;
+}
+
+.page-button:hover{
+    background-color: #1180AB;
+}
 
 
 
