--- a/src/Components/EditQuizPage/EditQuiz.css
+++ b/src/Components/EditQuizPage/EditQuiz.css
@@ -11,6 +11,7 @@
     /*min-height: 100%;*/
     width: 100%;
     padding-bottom: 60px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 .create-quiz-form{
@@ -72,4 +73,13 @@
     width: 60%;
     margin-right: 2%;
     height:auto;
+}
+
+.editQuizPage button{
+    background-color: #1198AB;
+    border: #1198AB;
+}
+
+.editQuizPage button:hover{
+    background-color: #1180AB;
 }
