--- a/src/Components/HomePage/Home.css
+++ b/src/Components/HomePage/Home.css
@@ -31,6 +31,16 @@
     margin-top: 200px;
     padding: 45px 0;
 }
+
+.home-header{
+    font-family: "Arial Black", sans-serif;
+    font-size: 4.5em;
+    text-align: center;
+    letter-spacing: -1px;
+    margin-top: 200px;
+    padding: 45px 0;
+}
+
 .paragraph{
     font-family: "Arial Black", sans-serif;
     font-size: 1.5em;
