--- a/src/Components/ListQuizPage/listQuiz.css
+++ b/src/Components/ListQuizPage/listQuiz.css
@@ -17,13 +17,14 @@
     border-radius: 5px;
     box-shadow: 5px 5px #ddd;
     min-height: 550px;
+    text-align: center;
 }
 
-.myQuiz{
+.listQuizPage .myQuiz{
     margin-left: 50px;
     margin-top: 50px;
-    font-family: "Arial Black", sans-serif;
-    font-size: 2.0em;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    font-size: 2.3em;
     text-align: center;
 }
 
