--- a/src/Components/MyLECsPage/MyLECs.css
+++ b/src/Components/MyLECsPage/MyLECs.css
@@ -6,6 +6,7 @@
     border-radius: 5px;
     box-shadow: 5px 5px #ddd;
     min-height: 650px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 .MyLECs .container{
@@ -29,4 +30,31 @@
 
 .pagination{
     justify-content: center;
+}
+
+.view-lec-btn{
+    background-color: #1198AB;
+    border: #1198AB;
+}
+
+.view-lec-btn:hover{
+    background-color: #1180AB;
+}
+
+.page-link{
+    color: #1198AB;
+}
+
+.page-link:hover{
+    background-color: #7DC2C7;
+    color: white;
+}
+
+.page-item.active .page-link{
+    background-color: #1198AB;
+    border: #1198AB 1px solid;
+}
+
+.MyLECs .header{
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
