--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -73,6 +73,7 @@
 
 .optionButton:focus{
     /*border: #FFFCF9 2px solid;*/
+    border: #7DC2C7 2px solid!important;
     background-color: #1198AB;
     color: white;
 }
