--- a/src/Components/ViewCommentsPage/ViewComments.css
+++ b/src/Components/ViewCommentsPage/ViewComments.css
@@ -1,11 +1,12 @@
 .ViewComments{
-    background-color: white;
+    background-color:#FFFCF9;
     width: 80%;
     margin: 50px auto;
     padding: 20px 60px 20px 60px;
     border-radius: 5px;
     box-shadow: 5px 5px #ddd;
     min-height: 550px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 .ViewComments .title{
@@ -27,4 +28,28 @@
 
 .see-more-button{
     width: 70%;
+}
+
+.ViewComments button {
+    border:#1198AB 2px solid;
+    color: white;
+    background-color: #1198AB;
+}
+
+.ViewComments button:hover {
+
+    color: white;
+    background-color: #1180AB;
+    border:#1180AB 2px solid;
+}
+
+.ViewComments button:focus {
+
+    color: white;
+    background-color: #1198AB;
+    border:#1198AB 2px solid;
+}
+
+.ViewComments .box{
+    text-align: center;
 }
