--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,17 @@
     background-color: #1180AB;
 }
 
+.modal-footer a{
+    padding: 8px 20px;
+    background-color: #1198AB;
+    border:#1198AB;
+}
+
+.modal-footer a:hover{
+    background-color: #1180AB;
+}
+
+
 .give-comment-textarea{
     height: 180px;
 }
