--- a/src/Components/EditQuizPage/EditQuiz.css
+++ b/src/Components/EditQuizPage/EditQuiz.css
@@ -1,17 +1,16 @@
 
 .editQuizPage{
-    /*background-color:  #e8effc;*/
-    /*height:100%;*/
-    /*margin-top: 0;*/
-    /*margin-bottom: 20px;*/
-    left: 0;
+    background-color:#FFFCF9;
+    width: 86%;
+    margin: 50px 7%;
     height: auto;
     position: absolute;
-
-    /*min-height: 100%;*/
-    width: 100%;
     padding-bottom: 60px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
+
+    box-shadow: 5px 5px #ddd;
+    min-height: 550px;
+    border-radius: 5px;
 }
 
 .create-quiz-form{
@@ -25,7 +24,7 @@
 }
 
 .button-col{
-    padding: 10px 100px;
+    padding: 10px 20px;
 }
 
 .form-group-custom{
@@ -33,6 +32,8 @@
     background-color: white;
     padding: 15px 25px;
     margin-bottom: 15px;
+    box-shadow: 5px 5px #ddd;
+    border: #9198AB 1px solid;
 }
 
 .quiz-row{
@@ -82,4 +83,9 @@
 
 .editQuizPage button:hover{
     background-color: #1180AB;
+}
+
+.editQuizPage button:focus{
+    background-color: #1198AB;
+    border: #1198AB;
 }
