--- a/src/Components/MyLECsPage/MyLECs.css
+++ b/src/Components/MyLECsPage/MyLECs.css
@@ -50,6 +50,10 @@
     color: white;
 }
 
+.page-link:focus{
+    color: #1198AB;
+}
+
 .page-item.active .page-link{
     background-color: #1198AB;
     border: #1198AB 1px solid;
