--- a/src/Components/SupervisorDashboard/SupervisorDashboard.css
+++ b/src/Components/SupervisorDashboard/SupervisorDashboard.css
@@ -26,3 +26,9 @@
     background-color: #1198AB;
     border:#1198AB 2px solid;
 }
+
+.supervisor-dashboard-img{
+    height: 130px!important;
+    width: 130px!important;
+    align-self: center!important;
+}
